The Veils of The Nether Update, pt 3
- Added Quality Tools

- Added and changed some sounds, including ambient and cave sounds.
- Changed boss health bars to look cool
- Added new fancy tooltip borders for the best items for each dimension
- Improved torch texture, now animated while in hand
- Reduced the chance that all zombies and pigmen will drop gear by half
- Reduced default music volume
- Changed loading screen tips
- Removed infernium finder (since the ore glows now)

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -66,14 +66,66 @@ definitions {
         enderskills:token
         enderskills:book
         %Heart Container
-        contenttweaker:infernal_fortress_scepter
+        timeisup:timer_bonus
      >
 
     #  [default: ]
     S:level1_entries <
-        contenttweaker:vitality_orb
+        
+     >
+
+    #  [default: ]
+    S:level2_entries <
+        
+     >
+
+    #  [default: ]
+    S:level3_entries <
+        contenttweaker:infernal_fortress_scepter
         mysticstaffs:fire_staff
         mysticstaffs:heal_staff
+        contenttweaker:deviled_egg_sandwich
+        %Infernium
+     >
+
+    #  [default: ]
+    S:level4_entries <
+        
+     >
+
+    #  [default: ]
+    S:level5_entries <
+        mysticstaffs:sunstrike_staff
+        mysticstaffs:glow_staff
+        mysticstaffs:invisibility_staff
+        %Jade
+     >
+
+    #  [default: ]
+    S:level6_entries <
+        
+     >
+
+    #  [default: ]
+    S:level7_entries <
+        mystic_staffs:wind_staff
+        mystic_staffs:path_staff
+        mystic_staffs:ice_ball_staff
+        %Diamond
+     >
+
+    #  [default: ]
+    S:level8_entries <
+     >
+
+    #  [default: ]
+    S:level9_entries <
+     >
+
+    #  [default: ]
+    S:level10_entries <
+        %Blaze
+        contenttweaker:vitality_orb
         %Alpha
         @nethercraft
         %Nether
@@ -89,16 +141,12 @@ definitions {
         %Bandages
         %Medkit
         contenttweaker:scrambled_magma_eggs
-        contenttweaker:deviled_egg_sandwich
         simpleores:tin_pickaxe
         adfinders:metals_finder
      >
 
     #  [default: ]
-    S:level2_entries <
-        mysticstaffs:sunstrike_staff
-        mysticstaffs:glow_staff
-        mysticstaffs:invisibility_staff
+    S:level11_entries <
         %Beta
         @erebus
         %Copper
@@ -106,60 +154,18 @@ definitions {
      >
 
     #  [default: ]
-    S:level3_entries <
-        mystic_staffs:wind_staff
-        mystic_staffs:path_staff
-        mystic_staffs:ice_ball_staff
+    S:level12_entries <
         %Gamma
         %Deep Stone
-        %Diamond
         %Coal
      >
 
     #  [default: ]
-    S:level4_entries <
-        mystic_staffs:flight_staff
-        mystic_staffs:solar_beam_staff
+    S:level13_entries <
         %Delta
         @srparasites
         minecraft:stone
         minecraft:cobblestone
-     >
-
-    #  [default: ]
-    S:level5_entries <
-     >
-
-    #  [default: ]
-    S:level6_entries <
-     >
-
-    #  [default: ]
-    S:level7_entries <
-     >
-
-    #  [default: ]
-    S:level8_entries <
-     >
-
-    #  [default: ]
-    S:level9_entries <
-     >
-
-    #  [default: ]
-    S:level10_entries <
-     >
-
-    #  [default: ]
-    S:level11_entries <
-     >
-
-    #  [default: ]
-    S:level12_entries <
-     >
-
-    #  [default: ]
-    S:level13_entries <
      >
 
     #  [default: ]
@@ -195,88 +201,88 @@ priorities {
 
 colors {
     #  [default: #FF996922]
-    S:level0_start_color=#FFAA00
+    S:level0_start_color=#FF996922
 
     #  [default: #FF5A3A1D]
-    S:level0_end_color=#000000
+    S:level0_end_color=#FF5B3B1D
 
     #  [default: #FF996922]
-    S:level1_start_color=dark_red
+    S:level1_start_color=#FF697C8C
 
     #  [default: #FF5A3A1D]
-    S:level1_end_color=black
+    S:level1_end_color=#FF3A4C61
 
     #  [default: #FF996922]
-    S:level2_start_color=dark_green
+    S:level2_start_color=#FF70453D
 
     #  [default: #FF5A3A1D]
-    S:level2_end_color=black
+    S:level2_end_color=#FF542323
 
     #  [default: #FF996922]
-    S:level3_start_color=0xFEFFFFFF
+    S:level3_start_color=#FF912307
 
     #  [default: #FF5A3A1D]
-    S:level3_end_color=black
+    S:level3_end_color=#FF818385
 
     #  [default: #FF996922]
-    S:level4_start_color=dark_blue
+    S:level4_start_color=#FF008FCC
 
     #  [default: #FF5A3A1D]
-    S:level4_end_color=black
+    S:level4_end_color=#FF044B8A
 
     #  [default: #FF996922]
-    S:level5_start_color=#FF996922
+    S:level5_start_color=#FF5C4C2D
 
     #  [default: #FF5A3A1D]
-    S:level5_end_color=#FF5A3A1D
+    S:level5_end_color=#FF5C4C2D
 
     #  [default: #FF996922]
-    S:level6_start_color=#FF996922
+    S:level6_start_color=#FF705A87
 
     #  [default: #FF5A3A1D]
-    S:level6_end_color=#FF5A3A1D
+    S:level6_end_color=#FF393556
 
     #  [default: #FF996922]
-    S:level7_start_color=#FF996922
+    S:level7_start_color=#FF7D8A91
 
     #  [default: #FF5A3A1D]
-    S:level7_end_color=#FF5A3A1D
+    S:level7_end_color=#FF7D8A91
 
     #  [default: #FF996922]
-    S:level8_start_color=#FF996922
+    S:level8_start_color=#FFA591B6
 
     #  [default: #FF5A3A1D]
-    S:level8_end_color=#FF5A3A1D
+    S:level8_end_color=#FFA591B6
 
     #  [default: #FF996922]
-    S:level9_start_color=#FF996922
+    S:level9_start_color=#FFFFFADB
 
     #  [default: #FF5A3A1D]
-    S:level9_end_color=#FF5A3A1D
+    S:level9_end_color=#FFFFDFAD
 
     #  [default: #FF996922]
-    S:level10_start_color=#FF996922
+    S:level10_start_color=dark_red
 
     #  [default: #FF5A3A1D]
-    S:level10_end_color=#FF5A3A1D
+    S:level10_end_color=black
 
     #  [default: #FF996922]
-    S:level11_start_color=#FF996922
+    S:level11_start_color=dark_green
 
     #  [default: #FF5A3A1D]
-    S:level11_end_color=#FF5A3A1D
+    S:level11_end_color=black
 
     #  [default: #FF996922]
-    S:level12_start_color=#FF996922
+    S:level12_start_color=0xFEFFFFFF
 
     #  [default: #FF5A3A1D]
-    S:level12_end_color=#FF5A3A1D
+    S:level12_end_color=black
 
     #  [default: #FF996922]
-    S:level13_start_color=#FF996922
+    S:level13_start_color=dark_blue
 
     #  [default: #FF5A3A1D]
-    S:level13_end_color=#FF5A3A1D
+    S:level13_end_color=black
 
     #  [default: #FF996922]
     S:level14_start_color=#FF996922
