Fog and lighting improvements
- The Nether now has a higher minimum lighting level (no longer pitch black without shaders)
- Added fog to the nether ONLY for those without shaders
- Added and removed some cringy loading screen tips

--- a/config/darkness.cfg
+++ b/config/darkness.cfg
@@ -2,13 +2,14 @@
 
 main {
     I:blacklistByID <
+        -1
      >
     S:blacklistByName <
      >
     B:darkDefault=true
     B:darkEnd=true
     B:darkEndFog=true
-    B:darkNether=true
+    B:darkNether=false
     B:darkNetherFog=true
     B:darkOverworld=true
     B:darkSkyless=true
