The Veils of the Nether Update, pt 4
- Added Wither summoning materials to the structure
- Added proper drops for the Wither
- Added 2 new items: Withering Infernium Ingot and Riftbreaker Crystal
- Riftbreaker Crystal is used to destroy blocks vertically and sends the player upwards, dropped by the Wither
- Replaced Infernium Pickaxe with Withering Infernium Pickaxe, dropped by the Wither
- Withering Infernium Ingot can not be crafted, only obtained from the wither. Added as a way for the player to make extra pickaxes if need be.
- Basalt, biotite, and black glazed terracotta are now explosion proof
- Changed time/speedrun related code to now be when the wither is killed instead of entering erebus

With this, the Wither and Nether progression should be fully implemented aside from the fight itself and the structure needing to be finished.

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -82,6 +82,7 @@ definitions {
     #  [default: ]
     S:level3_entries <
         contenttweaker:infernal_fortress_scepter
+        contenttweaker:riftbreaker_crystal
         mysticstaffs:fire_staff
         mysticstaffs:heal_staff
         contenttweaker:deviled_egg_sandwich
