Veils of the Nether Update, pt 5
- Added Champions
- All champions drop heart containers or crystals and lots of XP
- Removed Blights
- Removed infernium finder from jei
- Renamed zombie pigmen, dark zombie, bloody zombie, and festive creeper
- Adjusted and added tooltips and names for some items
- Wither now drops veilstrium ingots (so players can remake any broken armor b4 the erebus)
- More loading screen tips

--- a/config/adfinders/Finders/gems.cfg
+++ b/config/adfinders/Finders/gems.cfg
@@ -8,7 +8,7 @@ finderGems {
     I:durability=4
 
     # Set to 'false' if you don't need this unit. [default: true]
-    B:enabled=true
+    B:enabled=false
 
     # Defines how far from a player in vertical plane the ore vein can be found. [range: 1 ~ 64, default: 32]
     I:pingDepth=32
