Update mods, remove fast furnace (in cASM)

--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -9,6 +9,9 @@
 ##########################################################################################################
 
 advanced {
+    # When true, adds new bookmarks to the front of the bookmark list. When false, adds new bookmarks to the end of the bookmark list. [default: false]
+    B:addBookmarksToFront=false
+
     # Move the JEI search bar to the bottom center of the screen. [default: false]
     B:centerSearchBarEnabled=false
     B:debugModeEnabled=false
