--- a/font_selection/october_crow/smoothfont.cfg
+++ b/font_selection/october_crow/smoothfont.cfg
@@ -16,7 +16,7 @@ common {
     I:blurReduction=10
 
     # Brightness correction level for interpolated fonts.
-    I:brightness=3
+    I:brightness=1
 
     # This value is an option to adjust the rounding method of the character width that can be obtained by getCharWidth().
     # The character widths are rounded up if the fractions of the character width are equal to or more than this fraction value.
@@ -69,7 +69,7 @@ common {
     I:overlayLodBias=-5
 
     # Prioritize performance rather than quality.
-    B:performanceMode=true
+    B:performanceMode=false
 
     # Enable odd multiple GUI scale factors (x3,x5,...) when using unicode font.
     B:removeScaleRestriction=true
@@ -110,7 +110,7 @@ font {
 
     # Primary font name.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
-    S:fontName=October Crow
+    S:fontName=DakutenMinchoRetro
 
     # Secondary font name. It is used if the character cannot be rendered with the primary font.
     # (The font installed in the system or existing in the externalFontPaths folders (default:<minecraft dir>/fontfiles).)
@@ -129,7 +129,7 @@ font {
     I:fontEmphasis=0
 
     # OS font resolution. (0:8px, 1:10px, 2:12px, 3:16px, 4:24px, 5:32px, 6:48px, 7:64px)
-    I:fontResolution=7
+    I:fontResolution=6
 
     # Enable automatic font size detection for the font resolution.
     B:fontAutoSizing=true
@@ -139,16 +139,16 @@ font {
     S:fontSizingRefChars=
 
     # Scaling factor of system font size.
-    D:fontSizeScaleFactor=1.1
+    D:fontSizeScaleFactor=1.03
 
     # Transform non-default font narrowly or widely for MC default charset.
-    D:widthFactorDefaultCharset=1.15
+    D:widthFactorDefaultCharset=1.0
 
     # Transform non-default font narrowly or widely for unicode charset.
     D:widthFactorUnicodeCharset=1.0
 
     # Font gap.
-    I:fontGap=1
+    I:fontGap=0
 
     # Space width for system fonts.
     # (0:space width specified by the primary font, 1~3:custom width, 4:Minecraft default width)
