change some sounds (i dont remember which 🙃)

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ essential/screenshot-cache/
 essential/lwjgl3-natives/
 essential/screenshot-checksum-caches.json
 essential/Essential (forge_1.12.2).jar
+essential/mappings/
