Combat rework (added immersive combat)
- Added immersive combat
- Removed better combat
- Removed quality tools
- Removed equipment tooltips (not accurate with immersive combat)
- Reworked and simplified gear tooltips

- Rebalanced nether swords and bows

--- a/config/materialchanger.cfg
+++ b/config/materialchanger.cfg
@@ -98,6 +98,11 @@ changer {
         ATTACK_SPEED;simpleores:adamantium_axe;0.4
         ATTACK_SPEED;simpleores:onyx_axe;0.4
         
+        ATTACK_DAMAGE;nethercraft:glowood_sword;3
+        ATTACK_DAMAGE;nethercraft:netherrack_sword;4
+        ATTACK_DAMAGE;nethercraft:neridium_sword;5
+        ATTACK_DAMAGE;nethercraft:pyridium_sword;6
+        
         HARVEST_LEVEL;nethercraft:pyridium_pickaxe;3
         
         HARVEST_LEVEL;simpleores:copper_pickaxe;4
