--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -361,7 +361,7 @@ client {
     B:"Show invalid slots"=true
     B:"Shulker box tooltip"=true
     B:"Usage ticker"=true
-    B:"Visual stat display"=true
+    B:"Visual stat display"=false
 
     "food tooltip" {
         # This feature disables itself if any of the following mods are loaded: 
