--- a/config/tool_progression/general.cfg
+++ b/config/tool_progression/general.cfg
@@ -44,7 +44,7 @@ general {
 
 tooltip {
     # Set this to true if you like to get extended tooltips. [default: true]
-    B:enabled=true
+    B:enabled=false
 }
 
 
