Remove useless drops & bow recipe, misc tweaks

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -144,6 +144,7 @@ definitions {
         contenttweaker:scrambled_magma_eggs
         simpleores:tin_pickaxe
         adfinders:metals_finder
+        %Glowstone
      >
 
     #  [default: ]
