--- a/config/UniversalTweaks.cfg
+++ b/config/UniversalTweaks.cfg
@@ -6,6 +6,9 @@ general {
         # Fixes inconsistent delays of comparators to prevent redstone timing issues
         B:"Comparator Timing"=true
 
+        # Only damage living entities hit by falling blocks, prevents killing items and XP
+        B:"Falling Block Entity Damage"=true
+
         # Slims down the hopper bounding box for easier access of nearby blocks
         B:"Hopper Bounding Box"=true
 
@@ -90,6 +93,7 @@ general {
         B:"Entity Suffocation"=true
 
         # Fixes entity tracker to prevent client-sided desyncs when teleporting or changing dimensions
+        # Incompatible with SpongeForge
         B:"Entity Tracker"=true
 
         # Changes UUIDs of loaded entities in case their UUIDs are already assigned (and removes log spam)
@@ -146,6 +150,7 @@ general {
 
     "bugfixes: world" {
         # Fixes loading of outdated chunks to prevent duplications, deletions and data corruption
+        # Incompatible with SpongeForge
         B:"Chunk Saving"=true
 
         # Fixes invisible chunks in edge cases (small enclosed rooms at chunk borders)
@@ -166,21 +171,14 @@ general {
     }
 
     debug {
-        # Disables config resets on mod updates
-        # Please note that you will face duplicate/invalid config settings
         B:"Bypass Config Versioning"=true
 
         # For those who live life on the edge, may or may not include Jons
         B:"Bypass Incompatibility Warnings"=false
-
-        # Version number of the config file
-        # Do not touch!
         S:"Config Version"=1.12.2-1.4.1
 
         # Enables debug logging
         B:"Debug Logging"=false
-
-        # Enables a screen displaying incompatible mods on game load
         B:"Obsolete Mods Screen"=true
 
         # Prints the time the game needed to launch to the log
@@ -229,23 +227,17 @@ general {
 
             # Allows Forestry farms to pick up ExtraTrees fruit
             B:"Extra Trees: Gather Windfall"=true
+
+            # Allows Forestry farms to automatically replant cocoa beans
+            B:"Replanting Cocoa Beans"=true
         }
 
         "mo' creatures" {
-            # Adds support for modded biome spawns
-            # Syntax: modid;name;key;tag;filename
-            # modid    Mod ID required for this to be added
-            # name     Mod name
-            # key      Used for class lookups, needs to be a unique part of the modded package, e.g. mod.acgaming.*universaltweaks*.mods
-            # tag      Short tag for logs
-            # filename Filename to use for the generated config
             S:"Custom Modded Biomes" <
                 pvj;vibrantjourneys;vibrantjourneys;PVJ;ProjectVibrantJourneys.cfg
                 traverse;traverse;traverse;TRAV;Traverse.cfg
                 dimdoors;dimdoors;dimdoors;DD;DimDoors.cfg
              >
-
-            # Disables the flickering burning effect of flame wraiths
             B:"Disable Flame Wraith Burning"=true
         }
 
@@ -410,6 +402,16 @@ general {
 
         }
 
+        "cofh core" {
+            # Sets the damage multiplier of the Vorpal enchantment
+            D:"Vorpal Enchantment Damage"=10.0
+        }
+
+        "infernal mobs" {
+            # Enables compatibility between Infernal Mobs' Sticky effect and Capsule's Recall enchantment
+            B:"Sticky Recall Compatibility"=true
+        }
+
     }
 
     "tweaks: blocks" {
@@ -552,11 +554,18 @@ general {
         # Max: 1.0
         D:"Creeper Confetti Spawning Chance"=0.0
 
+        # Sets the additional damage that critical arrows deal
+        # -1 for vanilla random default
+        I:"Critical Arrow Damage"=-1
+
         # Disables creepers dropping music discs when slain by skeletons
         B:"Disable Creeper Music Discs"=true
 
         # Disables skipping night by using a bed while making it still able to set spawn
         B:"Disable Sleeping"=false
+
+        # Disables withers targeting animals
+        B:"Disable Wither Targeting AI"=true
 
         # Lets husks and strays spawn underground like regular zombies and skeletons
         B:"Husk & Stray Spawning"=true
@@ -718,6 +727,22 @@ general {
             B:"Taming Undead Horses"=true
         }
 
+        "damage velocity" {
+            # Enables the modification of damage sources that change the entity's velocity
+            B:"[1] Damage Velocity Toggle"=true
+
+            # Syntax: damagetype
+            S:"[2] Damage Velocity List" <
+             >
+
+            # Blacklist Mode: Damage sources that don't change velocity, others do
+            # Whitelist Mode: Damage sources that change velocity, others don't
+            # Valid values:
+            # WHITELIST
+            # BLACKLIST
+            S:"[3] List Mode"=WHITELIST
+        }
+
     }
 
     "tweaks: items" {
@@ -745,8 +770,6 @@ general {
 
         # Prevents placing of liquid source blocks in the world
         B:"Hardcore Buckets"=false
-
-        # Disables the 1.9 combat update attack cooldown
         B:"No Attack Cooldown"=false
 
         # Disables crafting recipes for repairing tools
@@ -885,6 +908,17 @@ general {
             D:"[8] Rebound Multiplier"=0.25
         }
 
+        "attack cooldown" {
+            # Disables the 1.9 combat update attack cooldown
+            B:"[1] No Attack Cooldown Toggle"=false
+
+            # Only removes the attack cooldown of swords to balance other weapons like axes
+            B:"[2] Only Affect Swords"=false
+
+            # Hides attack speed tooltips of weapons
+            B:"[3] Hide Attack Speed Tooltip"=true
+        }
+
     }
 
     "tweaks: misc" {
@@ -914,8 +948,6 @@ general {
         # Sets the amount of XP needed for each level, effectively removing the increasing level scaling
         # 0 for vanilla default
         I:"Linear XP Amount"=0
-
-        # Disables the flashing of skybox and ground brightness on lightningflash strikes
         B:"No Lightning Flash"=false
 
         # Disables the flashing effect when the night vision potion effect is about to run out
@@ -942,6 +974,10 @@ general {
 
         # Skips the credits screen after the player goes through the end podium portal
         B:"Skip Credits"=false
+
+        # Automatically confirms the 'Missing Registry Entries' screen on world load
+        # Identical to the launch parameter `-Dfml.queryResult=confirm`
+        B:"Skip Missing Registry Entries Screen"=true
         B:"Suppress Tutorial Hints"=true
 
         # Adds a button to the pause menu to toggle cheats
@@ -1103,6 +1139,20 @@ general {
             B:"[5] Disable Tutorial Toasts"=true
         }
 
+        lightning {
+            # Sets the damage lightning bolts deal to entities
+            D:"Lightning Damage"=5.0
+
+            # Sets the duration in ticks lightning bolts set entities on fire
+            I:"Lightning Fire Ticks"=8
+
+            # Disables the creation of fire around lightning strikes
+            B:"No Lightning Fire"=false
+
+            # Disables the flashing of skybox and ground brightness on lightning bolt strikes
+            B:"No Lightning Flash"=false
+        }
+
     }
 
     "tweaks: performance" {
@@ -1128,7 +1178,8 @@ general {
         B:"Fast Prefix Checking"=true
 
         # Skips initial world chunk loading & garbage collection to speed up world loading
-        B:"Fast World Loading"=true
+        # May have side effects such as slower chunk generation
+        B:"Fast World Loading"=false
 
         # Fixes slow background startup edge case caused by checking tooltips during the loading process
         B:"Faster Background Startup"=true
