--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -289,7 +289,7 @@ bows {
 
 
 dual-wielding {
-    # Reduces the damage dealt of an attack per level of Mining Fatigue. For example, if this setting is set to 0.25F, then Mining Fatigue II reduces player damage by 50%. Set 0.0F to disable.
+    # Reduces the damage dealt of an attack per level of Mining Fatigue. For example, if this setting is set to 0.25, then Mining Fatigue II reduces player damage by 50%. Set 0.0 to disable.
     D:"Mining Fatigue Damage Reduction"=0.0
 
     # The percent efficiency of an attack with offhanded weapon    -->   damage * efficiency.
@@ -298,7 +298,7 @@ dual-wielding {
     # If set to true, attacking with your offhand is disabled while sneaking. The purpose of this is to add compatibility to mods such as 'CarryOn' or 'Effortless Building' where you need to use certian right-click functionality. [default: true]
     B:"Sneaking Disables Offhand Attack"=true
 
-    # How much mining fatigue is applied when dual-wielding with a versatile weapon. Default 3, which translates to 30% slower attack speed, or Mining Fatigue III. [range: 3 ~ 10, default: 0]
+    # How much of a slow to attack speed is applied when dual-wielding with one VERSATILE weapon. Default 0.3, which translates to a 30% slower attack speed. Dual-weilding with two VERSATILE weapons will slow attack speed by 45%.
     I:"Versatile Fatigue Amount"=0
 }
 
@@ -516,7 +516,7 @@ swords {
     # 
     # The [Additional Attack Speed=0.2] field is a value added to the sword Attack Speed.
     # For example, if this field is set to 0.2, a matched sword would have the Attack Speed value increased by 0.2.
-    # If that sword had an Attack Speed of 1.6, it would become 1.8. This field can also accept negative values, such as -0.6. [default: [[Sword Substring=golden_sword]		[Additional Attack Speed=0.8]], [[Sword Substring=stone_sword]		[Additional Attack Speed=-0.8]], [[Sword Substring=wooden_sword]		[Additional Attack Speed=0.8]]]
+    # If that sword had an Attack Speed of 1.6, it would become 1.8. This field can also accept negative values, such as -0.6. [default: [[Sword Substring=golden_sword]		[Additional Attack Speed=0.4]], [[Sword Substring=wooden_sword]		[Additional Attack Speed=0.4]]]
     S:"Sword Tweaker" <
         [Sword Substring=golden_sword]		[Additional Attack Speed=0.2]
         [Sword Substring=stone_sword]		[Additional Attack Speed=-0.1]
@@ -625,7 +625,11 @@ visual {
         net.torocraft.toroquest.entities.creatures.ICitizen
      >
 
-    # Whitelisted item classes for attacking. [default: [net.minecraft.item.ItemSword], [net.minecraft.item.ItemTool], [net.minecraft.item.ItemHoe], [com.oblivioussp.spartanweaponry.item.ItemThrowingWeapon]]
+    # Blacklisted item classes. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:  com.flansmod.common.guns.ItemGun [default: ]
+    S:"Item Class Blacklist" <
+     >
+
+    # Whitelisted item classes for attacking. If an item is added to this list, it will function as an Immersive Combat weapon. The Custom Weapons config is for editing the values and attributes of weapons. The class  net.minecraft.item.ItemSword  and anything that extends it is added by default. [default: [net.minecraft.item.ItemSword], [net.minecraft.item.ItemTool], [net.minecraft.item.ItemHoe], [com.oblivioussp.spartanweaponry.item.ItemThrowingWeapon]]
     S:"Item Class Whitelist" <
         net.minecraft.item.ItemSword
         net.minecraft.item.ItemTool
