--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -499,8 +499,6 @@ client {
         B:"Enable Chicken"=true
         B:"Enable Cow"=true
         B:"Enable Pig"=true
-
-        # The chance for an animal to have a special "Shiny" skin, like a shiny pokemon. This is 1 in X. Set to 0 to disable.
         I:"Shiny Animal Chance"=1024
     }
 
@@ -1630,6 +1628,11 @@ tweaks {
     }
 
     "quick armor swapping" {
+        # Armor that should be prevented from being quick-swapped
+        # Format is modid:item[:meta]
+        S:"Armor Blacklist" <
+         >
+
         # This feature disables itself if any of the following mods are loaded: 
         #  - iberia
         # This is done to prevent content overlap.
