drastically reduce volume of many sounds
i love you dynamic surroundings

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -340,19 +340,34 @@ sound {
 
     # Configure how each individual sound will be handled (block, cull, and volume scale) [default: [minecraft:block.water.ambient cull], [minecraft:block.lava.ambient cull], [minecraft:entity.sheep.ambient cull], [minecraft:entity.chicken.ambient cull], [minecraft:entity.cow.ambient cull], [minecraft:entity.pig.ambient cull], [dsurround:bison block], [dsurround:elephant block], [dsurround:gnatt block], [dsurround:insectbuzz block], [dsurround:hiss block], [dsurround:rattlesnake block]]
     S:"Sound Settings" <
-        dsurround:bison cull
-        dsurround:crocodile cull
-        dsurround:crow cull
-        dsurround:elephant cull
-        dsurround:frog cull
-        dsurround:gnatt cull
-        dsurround:hiss cull
-        dsurround:insectbuzz cull
-        dsurround:insectcrawl cull
-        dsurround:monstergrowl cull
-        dsurround:rattlesnake cull
-        dsurround:seagulls cull
-        dsurround:whale cull
+        dsurround:bison cull 
+        dsurround:crocodile cull 
+        dsurround:crow cull 
+        dsurround:elephant cull 
+        dsurround:frog cull 
+        dsurround:gnatt cull 
+        dsurround:hiss cull 
+        dsurround:insectbuzz cull 
+        dsurround:insectcrawl cull 
+        dsurround:monstergrowl cull 
+        dsurround:rattlesnake cull 
+        dsurround:seagulls cull 
+        dsurround:whale cull 
+        minecraft:entity.blaze.death 40
+        minecraft:entity.blaze.shoot 40
+        minecraft:entity.endermen.stare 135
+        minecraft:entity.generic.explode 70
+        minecraft:entity.generic.hurt 75
+        minecraft:entity.generic.splash 50
+        minecraft:entity.ghast.shoot 5
+        minecraft:entity.ghast.warn 90
+        minecraft:entity.item.pickup 90
+        minecraft:entity.lightning.impact 70
+        minecraft:entity.lightning.thunder 85
+        minecraft:entity.player.attack.nodamage 90
+        minecraft:entity.player.hurt_on_fire 60
+        minecraft:entity.player.splash 75
+        minecraft:entity.wither.shoot 70
      >
 
     # Size of a stream buffer in kilobytes (0: system default - usually 128K bytes) [range: 0 ~ 2147483647, default: 32]
