many RMV fixes and tweaks
- baby magma cubes no longer immediately die when spawned
- wither has sensible hp
- disabled global gear options
- increase silverfish split chance
- removed zombies breaking some blocks when idle, too much of a performance impact

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -56,7 +56,6 @@ attributes {
         primitivemobs:flame_spewer;generic.maxHealth;0;-15;/;0
         nethercraft:camouflage_spider;generic.maxHealth;0;-25;/;0
         primitivemobs:festive_creeper;generic.maxHealth;0;-10;/;0
-        magma_cube;generic.maxHealth;0;-5;/;0
         ghast;generic.maxHealth;0;-5;/;0
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
         primitivemobs:blazing_juggernaut;generic.followRange;0;-15
@@ -69,6 +68,8 @@ attributes {
         
         eyesinthedarkness:eyes;generic.movementSpeed;1;0.5
         grue:entitygrue;generic.followRange;0;60
+
+        minecraft:wither;generic.maxHealth;0;-400
      >
 }
 
@@ -320,14 +321,14 @@ equipment_globaloptions {
     B:Equipment_GlobalOptions_DisableBabyZombieEquipment=true
 
     # Should rough mobs get more gear based upon distance from world spawn? [default: true]
-    B:Equipment_GlobalOptions_DistanceMultiplier=true
+    B:Equipment_GlobalOptions_DistanceMultiplier=false
 
     # The distance threshold used to calculate the DistanceMultiplier.
     # Shorter distances here means mobs will have more gear closer to the World Spawn. [range: 0 ~ 2147483647, default: 1000]
     I:Equipment_GlobalOptions_DistanceThreshold=1000
 
     # Should rough mobs get more gear as it gets closer to midnight? [default: true]
-    B:Equipment_GlobalOptions_TimeMultiplier=true
+    B:Equipment_GlobalOptions_TimeMultiplier=false
 }
 
 
@@ -499,7 +500,7 @@ silverfish {
 
     # Chance (1 in X) to split a silverfish in two when attacked
     # Set to 0 to disable this feature [range: 0 ~ 32767, default: 3]
-    I:silverfishSplitChance=5
+    I:silverfishSplitChance=10
 }
 
 
@@ -925,20 +926,6 @@ zombie {
     # Blocks which can be destroyed by zombies if they have no attack target
     # Delete all lines to disable this feature [default: [minecraft:carrots], [minecraft:potatoes], [minecraft:wheat], [minecraft:nether_wart], [minecraft:reeds], [minecraft:beetroots], [minecraft:pumpkin_stem], [minecraft:melon_stem], [minecraft:pumpkin], [minecraft:hay_block], [minecraft:melon_block], [minecraft:torch], [minecraft:lit_redstone_lamp], [minecraft:lit_pumpkin]]
     S:zombieBreakBlocks <
-        minecraft:carrots
-        minecraft:potatoes
-        minecraft:wheat
-        minecraft:nether_wart
-        minecraft:reeds
-        minecraft:beetroots
-        minecraft:pumpkin_stem
-        minecraft:melon_stem
-        minecraft:pumpkin
-        minecraft:hay_block
-        minecraft:melon_block
-        minecraft:torch
-        minecraft:lit_redstone_lamp
-        minecraft:lit_pumpkin
      >
 
     # Entities which count as zombie entities [default: [minecraft:zombie], [minecraft:zombie_villager], [minecraft:husk], [minecraft:zombie_pigman]]
@@ -980,13 +967,7 @@ zombie {
 
     # zombie boss names. Please be more creative than I am... :P [default: [Zombie King], [Flesh King], [Dr. Zomboss], [Azog], [Zon-Goku], [Amy], [Z0mb3y]]
     S:zombie_BossNames <
-        Zombie King
-        Flesh King
-        Dr. Zomboss
-        Azog
-        Zon-Goku
-        Amy
-        Z0mb3y
+
      >
 }
 
