heart crystals tweaks
- only drops from champions
- levels req: 3 -> 2
- now completely restores hp when used

--- a/config/scalinghealth/main.cfg
+++ b/config/scalinghealth/main.cfg
@@ -200,16 +200,16 @@ main {
         B:"Healing Items Fire Healing Event"=true
 
         # The chance of a hostile mob dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.009999999776482582]
-        S:"Heart Drop Chance"=0.009999999776482582
+        S:"Heart Drop Chance"=0.0
 
         # The chance of a passive mob (animals) dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.0010000000474974513]
-        S:"Heart Drop Chance (Passive)"=0.0010000000474974513
+        S:"Heart Drop Chance (Passive)"=0.0
 
         # If true, the healing from heart containers will fire a standard healing event, allowing other mods to execute additional code or cancel the healing altogether. Disable if needed.
         B:"Heart Healing Event"=true
 
         # The number of experience levels required to use a heart container. [range: 0 ~ 2147483647, default: 3]
-        I:"Heart XP Level Cost"=3
+        I:"Heart XP Level Cost"=2
 
         # The maximum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 2]
         I:"Hearts Dropped by Blight Max"=1
@@ -224,7 +224,7 @@ main {
         I:"Hearts Dropped by Boss Min"=2
 
         # The amount of extra health restored when using a heart container. This applies whether or not hearts increase max health. [range: 0 ~ 2147483647, default: 4]
-        I:"Hearts Health Restored"=4
+        I:"Hearts Health Restored"=100
 
         # If set to false, hearts will no longer increase the player's maximum health, but can still be used for healing.
         B:"Hearts Increase Max Health"=true
@@ -345,7 +345,7 @@ main {
 
         health {
             # Allow boss mobs (dragon, wither, etc.) to spawn with extra health based on difficulty.
-            B:"Allow Boss Extra Health"=true
+            B:"Allow Boss Extra Health"=false
 
             # Allow hostile mobs (monsters) to spawn with extra health based on difficulty.
             B:"Allow Hostile Extra Health"=true
