--- a/config/vintagefix.properties
+++ b/config/vintagefix.properties
@@ -16,5 +16,6 @@ mixin.model_optimizations.dedup_baked_quad=true
 mixin.model_optimizations.dedup_multipart=true
 mixin.model_optimizations.dedup_quad_lists=true
 mixin.model_optimizations.location_canon=true
+mixin.model_optimizations.simpler_perspective_wrapper=true
 mixin.resourcepacks=true
 mixin.textures=true
