--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -225,6 +225,9 @@ bows {
     # The [Sweep] field adds sweep to a weapon.
     # Set [Sweep] to 0 to disable sweep on a weapon.
     # Set [Sweep] to 1 to have that weapon deal 1.0 damage to sweep targets.
+    # Set [Sweep] to 2 to have that weapon deal 25% damage to sweep targets.
+    # Set [Sweep] to 3 to have that weapon deal 50% damage to sweep targets.
+    # Set [Sweep] to 4 to have that weapon deal 75% damage to sweep targets.
     # Set [Sweep] to 5 to have that weapon deal 100% of the damage dealt to the main target to the other sweep targets.
     # For each level of sweep above 1, the weapon deals 25% of the main target damage to sweep targets, with a minimum of 1.0 damage.
     # A sweep level higher than 5 (through this config or through the Sweeping enchantmet) does not do any sweep damage, however, it still increases the sweep radius.
@@ -356,10 +359,10 @@ general {
     # If set to true, shoveling grass paths requires an animation. Shovels with a faster attack speed will path land faster. [default: true]
     B:"Digging Grass Paths Requires Animation"=true
 
-    # How high the hitbox will be extended for melee attacks
+    # How high the hitbox will be extended for melee attacks. Increase the value of this setting to make the Y-accuracy of attacks more forgiving.
     D:"Extra Attack Height"=0.5
 
-    # How wide the hitbox will be extended for melee attacks.
+    # How wide, on all directions, the hitbox will be extended for melee attacks. Increase the value of this setting to make the XZ-accuracy of attacks more forgiving.
     D:"Extra Attack Width"=0.1
 
     # Set to true to have Fast Equip use only items in the hotbar instead of the entire inventory. [default: false]
@@ -371,13 +374,19 @@ general {
     # Setting to have Nausea & Blindness affect mobs. If a mob has a height equal to or less than this value, it will be affected by Blindess and Nausea potion effects, which causes them to often lose their target and stumble around. Set to 0.0F to disable. [range: 0.0 ~ 256.0, default: 2.2]
     B:"Nausea Affects Mobs"=true
 
+    # Set to true to override left and right keybinds. Use at your own risk! Setting this to false might allow players to 'cheese' extra attacks and attack while on cooldown with certain weapons from mods! [default: true]
+    B:"Override Left And Right Click Keybinds"=true
+
+    # The attack damage of a weapon is used to calculate the chance of parrying an attack. This setting counts as a multiplier to attack damage for determining the chance to parry an attack. The higher the attack damage of the parry weapon, the higher chances of parrying. This increases the effectivness of parrying with two-handed weapons, which often have higher attack damage. This method also lets weapon material tiers scale to difficulty. Higher damage incoming attacks have a lower the chance of parried. For example, if this setting is set at 3 and the parrying weapon has 5 attack damage, an incoming attack of 9 damage has a 9/(3*5) or 60% chance of NOT being parried.
+    D:"Parry Chance Effectivness"=3.0
+
     # Show the shield cooldown crosshair, similar to the dual-wielding crosshairs. [default: true]
     B:"Show Shield Cooldown Crosshair"=true
 
     # Thorns, but for undead. How much damage undead attackers will take against an entity wearing Silver armor per piece of Silver armor. Setting this to 1.5F and wearing 2 pieces of Silver armor deals 3.0F damage to undead attackers. Silver weapons get a damage bonus, so why not add a special interaction with Silver armor? Set to 0.0F to disable. [range: 0.0 ~ 256.0, default: 1.5]
     S:"Silver Armor Damage"=1.5
 
-    # If set to true, stripping bark requires an animation. Axes with a faster attack speed strip bark faster. Enable this setting if you have future MC installed which allows stripping of bark. [default: true]
+    # CURRENTLY NOT WORKING. If set to true, stripping bark requires an animation. Axes with a faster attack speed strip bark faster. Enable this setting if you have future MC installed which allows stripping of bark. [default: false]
     B:"Stripping Bark Requires Animation"=true
 
     # If set to true, tilling land requires an animation. Hoes with a faster attack speed till land faster. [default: true]
@@ -398,6 +407,9 @@ general {
 knockback {
     # Enable have the KNOCKBACK_RESISTANCE attribute reduce the strength of knockback effects, rather than reducing the chance to not be knocked back. (For example: by default, a knockback_resistance of 0.5 means a 50% chance to not be knocked back from an attack. However, if this setting is true, a knockback_resistance of 0.5 means the distance or effects of being knocked back are 50% less far or powerful. [default: true]
     B:"Better Knockback"=true
+
+    # How far both the attacker and victim are knockbacked after a parry. [range: 0.0 ~ 1.0, default: 0.5]
+    S:"Parry Knockback Amount"=0.5
 
     # Increases the knockback of an attack when sprinting. For example, setting this to 2.0F is the same knockback amount as Knockback II.
     D:"Sprinting Knockback Amount"=0.5
@@ -557,7 +569,7 @@ tooltips {
     # If set to true, display Reach Distance as the total weapon Reach Distance (5.0 Reach Distance), instead of additional Reach Distance (+1.0 Reach Distance). [default: false]
     B:"Show Reach Tooltip As Total"=false
 
-    # If set to true, display the Sweep tooltip. [default: false]
+    # If set to true, display the Sweep tooltip. [default: true]
     B:"Show Sweep Tooltip"=false
 }
 
@@ -625,7 +637,7 @@ visual {
         net.torocraft.toroquest.entities.creatures.ICitizen
      >
 
-    # Blacklisted item classes. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:  com.flansmod.common.guns.ItemGun [default: ]
+    # Blacklisted item classes. If an item is added to this list, it will have the default left-click and right-click behavior. This setting is useful for gun mods, or items that need to have their default left-click and right-click functionality. Example config value:    com.flansmod.common.guns.ItemGun    com.mrcrayfish.guns.item.ItemGun [default: ]
     S:"Item Class Blacklist" <
      >
 
