--- a/config/bettercombat.cfg
+++ b/config/bettercombat.cfg
@@ -122,6 +122,9 @@ bows {
     # Disable blocking while shield bash is on cooldown. [default: false]
     B:"Disable Blocking While Shield Bashing"=false
 
+    # Shield bashing an enemy taunts them, setting the attacker as the attack target. [default: true]
+    B:"Shield Bashing Taunts"=true
+
     # Multiplier for silver shield bash against undead. Set to 1.0F to disable. [range: 0.0 ~ 256.0, default: 1.5]
     S:"Shield Silver Damage"=1.5
 
