--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ essential/lwjgl3-natives/
 essential/screenshot-checksum-caches.json
 essential/Essential (forge_1.12.2).jar
 essential/mappings/
+mods/preview_OptiFine_1.12.2_HD_U_G6_pre1.jar
