Deep Dark horror rework
- Added Hungering Darkness for the deep dark only
- The only mobs that spawn in the deep dark are now eyes, weeping angels, and creepers
- Adjusted and changed many sounds, including eye sounds
- Adjusted the volume of many sounds
- Buffed the move speed and follow range of eyes
- weeping angels follow the player from a massive distance
- Adjusted shader settings, can no longer see the sky in the deep dark, increased torch brightness, decreased exposure

--- a/config/Weeping Angels.cfg
+++ b/config/Weeping Angels.cfg
@@ -50,7 +50,7 @@ general {
         B:playSeenSounds=true
 
         # Determines the range the angels will look for players within, personally, I'd stay under 100
-        I:stalkRange=100
+        I:stalkRange=500
 
         # If enabled, Angels will NOT teleport you in creative
         B:teleportInCreative=false
@@ -76,12 +76,12 @@ general {
         # The maximum amount of angels per biome
         # Min: -2147483648
         # Max: 25
-        I:maximumSpawn=4
+        I:maximumSpawn=30
 
         # The minimum amount of angels per biome
         # Min: -2147483648
         # Max: 24
-        I:minimumSpawn=2
+        I:minimumSpawn=30
 
         # Note: A list of biomes where angels should NOT spawn.
         S:notAllowedBiomes <
@@ -93,7 +93,7 @@ general {
          >
 
         # The angel spawn probability rate
-        I:spawnProbability=20
+        I:spawnProbability=0
 
         # This will only accept: WATER_CREATURE, AMBIENT, CREATURE, MONSTER || Anything else WILL crash your game.
         # Valid values:
@@ -166,7 +166,7 @@ general {
         # STRUCTURES
         # RANDOM_PLACE
         # DONT
-        S:teleportType=RANDOM_PLACE
+        S:teleportType=DONT
     }
 
 }
