--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -356,7 +356,7 @@ sound {
         minecraft:entity.blaze.death 40
         minecraft:entity.blaze.shoot 40
         minecraft:entity.endermen.stare 135
-        minecraft:entity.generic.explode 70
+        minecraft:entity.generic.explode 49
         minecraft:entity.generic.hurt 75
         minecraft:entity.generic.splash 50
         minecraft:entity.ghast.shoot 5
@@ -367,7 +367,20 @@ sound {
         minecraft:entity.player.attack.nodamage 90
         minecraft:entity.player.hurt_on_fire 60
         minecraft:entity.player.splash 75
-        minecraft:entity.wither.shoot 70
+        minecraft:entity.wither.shoot 63
+        weeping-angels:angel_ambient 140
+        weeping-angels:angel_neck_snap 295
+        weeping-angels:angel_seen_1 block 275
+        weeping-angels:angel_seen_2 block 275
+        weeping-angels:angel_seen_3 block 275
+        weeping-angels:angel_seen_4 block 275
+        weeping-angels:angel_seen_5 block 275
+        weeping-angels:angel_seen_6 block 275
+        weeping-angels:angel_seen_7 block
+        weeping-angels:angel_seen_8 block
+        weeping-angels:blow 126
+        weeping-angels:child_run 126
+        weeping-angels:stone_scrap 250
      >
 
     # Size of a stream buffer in kilobytes (0: system default - usually 128K bytes) [range: 0 ~ 2147483647, default: 32]
