--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -24,7 +24,6 @@ attributes {
         wither_skeleton;generic.maxHealth;0;-5
         slime;generic.maxHealth;1;0.5
         blaze;generic.maxHealth;0;-10;/;0
-        wither;generic.maxHealth;1;1
         vindication_illager;generic.maxHealth;1;0.5
         evocation_illager;generic.maxHealth;1;1
         zombie;generic.followRange;0;30
@@ -66,10 +65,8 @@ attributes {
 
         minecraft:zombie;generic.movementSpeed;1;0.3
         
-        eyesinthedarkness:eyes;generic.movementSpeed;1;0.5
-        grue:entitygrue;generic.followRange;0;60
-
-        minecraft:wither;generic.maxHealth;0;-400
+        eyesinthedarkness:eyes;generic.movementSpeed;1;1.0
+        eyesinthedarkness:eyes;generic.followRange;0;40
      >
 }
 
@@ -894,15 +891,14 @@ wither {
     B:_witherFeaturesEnabled=false
 
     # Set to false to turn off knockback damage. [default: true]
-    B:witherEnableKnockBackDamage=true
+    B:witherEnableKnockBackDamage=false
 
     # Entities which count as wither entities [default: [minecraft:wither]]
     S:witherEntities <
-        minecraft:wither
      >
 
     # Set to false to prevent withers from pushing attackers away. [default: true]
-    B:witherPushAttackersAway=true
+    B:witherPushAttackersAway=false
 
     # Delay in ticks between each spawned Skeleton
     # Set to 0 to disable this feature [range: 0 ~ 32767, default: 200]
