--- a/config/champions.cfg
+++ b/config/champions.cfg
@@ -60,6 +60,8 @@ general {
     # Set which mobs are blacklisted or whitelisted for champion mobs, leave blank to disable this option
     S:"Mob List" <
         minecraft:silverfish
+        beneath:shadow
+        eyesinthedarkness:eyes
      >
 
     # Set whether the mob configuration is blacklisted or whitelisted
