--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ essential/mappings/
 mods/preview_OptiFine_1.12.2_HD_U_G6_pre1.jar
 vintagefix/transformerCache/jarDiscoverer.cache
 mods/memory_repo/*
+config/mod-director/file-director_requisites.bundle.json
